<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage_Fragment.insert_page.insert_income_Fragment">

    <EditText
        android:id="@+id/insert_time"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="date|datetime|time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_money"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/money"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_type"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_info"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/note"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_pay"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/pay"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/insert_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="36dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_info" />

    <Button
        android:id="@+id/insert_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="36dp"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_info" />

</androidx.constraintlayout.widget.ConstraintLayout>