<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.vogella.android.mainpage_Fragment.other">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/other" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="610dp">

        <Button
            android:id="@+id/userdata"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="520dp"
            android:background="@drawable/c_borrder"
            android:text="@string/userdata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/LogOut"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="332dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/c_borrder"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/info"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="520dp"
            android:background="@drawable/c_borrder"
            android:text="@string/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userdata" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>