<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app_info_page">

    <TextView
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/info"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="681dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/app_update_date" />

            <TextView
                android:id="@+id/app_update_date"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/app_update_ver" />

            <TextView
                android:id="@+id/app_update_ver"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/app_update_info" />

            <TextView
                android:id="@+id/app_update_info"
                android:layout_width="match_parent"
                android:layout_height="409dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/app_update_privacy" />

            <TextView
                android:id="@+id/app_update_privacy"
                android:layout_width="match_parent"
                android:layout_height="46dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>