<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_title"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Year" />

        <Spinner
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/income_expend_total"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/income"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/expend"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/record_income"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/record_expend"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="14sp" />

            <TextView
                android:id="@+id/record_total"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_item"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_expend_total" />

</androidx.constraintlayout.widget.ConstraintLayout>